crates/swc_ecma_parser/tests/test262-error-references/fail/52a2eb6caebf1bf7.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/52a2eb6caebf1bf7.js:1:6
  |
1 | var x,
  |      ^

